# precise-mrd-mini

./: CHANGELOG.md  CLOUD_DEPLOYMENT.md  CONTRIBUTING.md  DASHBOARD_README.md  Dockerfile  Dockerfile.cpu  Dockerfile.cuda  LICENSE  MANIFEST.in  Makefile  PKG-INFO  README.md  SOURCES.txt  __init__.py  advanced_stats.py  alembic.ini  api.py  cache.py  call.py  celery_app.py  cli.py  collapse.py  config.py  dashboard.py  data_schema.py  data_schemas.py  database.py  deep_learning_models.py  deploy.sh  determinism_utils.py  docker-compose.yml  dvc-workflows.py  dvc.yaml  enums.py  environment.yml  error_model.py  exceptions.py  fastq.py  job_manager.py  logging_config.py  (+30 more)
alembic/: env.py
alembic/versions/: f5605329029a_initial_migration.py
assets/schemas/: calibration.schema.json  power.schema.json  run_context.schema.json
cloud/: aws.tf
configs/: fastq.yaml  smoke.yaml
data/: test.fastq
determinism_utils/: __init__.py  hash_artifacts.py  seed.py
docs/: api-reference.md  assumptions.md  contamination 2.md  contamination.md  evaluation.md  getting-started 2.md  getting-started.md  index 2.md  index.md  installation.md  quickstart.md  reproducibility.md  statistical-validation 2.md  statistical-validation.md
docs/assets/: extra.css
docs/cli/: index.md
docs/tutorials/: contamination_analysis.md  formal_detection_limits.ipynb  formal_detection_limits.md
eval/: __init__ 2.py  __init__.py  lod.py  stratified.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml
models/: __init__.py  base.py  deep_learning.py  machine_learning.py  statistical.py
precise-mrd-mini/: Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
precise-mrd-mini/configs/: default.yaml  report.yaml  simulate_small.yaml
precise-mrd-mini/data/: synthetic_config.yaml
precise-mrd-mini/data/ground_truth/: variants.csv
precise-mrd-mini/docs/: assay_improvements.md  reading_log.md  validation.md  validation_plan.md
precise-mrd-mini/docs/abstracts/: oncology2025.md
precise-mrd-mini/docs/manuscript/: draft.md
precise-mrd-mini/notebooks/: 01_explore.ipynb  02_sweeps.ipynb
precise-mrd-mini/reports/: auto_report.html  auto_report.md  template.md.jinja
precise-mrd-mini/reports/slides/: slides.md
precise-mrd-mini/rust_ext/: Cargo.toml
precise-mrd-mini/rust_ext/src/: lib.rs
precise-mrd-mini/simulated_reads/: metadata.json  reads.parquet
precise-mrd-mini/src/mrd/: __init__.py  error_model.py  mrd_call.py  qc.py  report.py  simulate.py  umi.py
precise-mrd-mini/src/precise_mrd/: __init__.py  cli.py  context.py  errors.py  filters.py  io.py  profiling.py  qc.py  report.py  simulate.py  stats.py  umi.py
precise-mrd-mini/tests/: test_error_model.py  test_mrd_call.py  test_simulate.py  test_umi.py
precise-mrd-mini/tmp/: collapsed.parquet  error_model.parquet  families.parquet  mrd_calls.csv  mrd_summary.json
precise-mrd-mini/workflow/: Snakefile
precise-mrd-mini/workflow/reports/: template.md.jinja
precise-mrd-mini/workflow/reports/figures/: lod_table.csv
precise-mrd-mini/workflow/reports/slides/: slides.md
precise-mrd-mini/workflow/tmp/: qc_metrics.json
precise_mrd/: __init__.py  advanced_stats.py  api.py  call.py  cli.py  collapse.py  dashboard.py  data_schemas.py  deep_learning_models.py  error_model.py  exceptions.py  logging_config.py  performance.py  pipeline_service.py  reporting.py  simulate.py  statistical_validation.py  utils.py  validation.py
precise_mrd/determinism_utils/: __init__.py  seed.py
precise_mrd/eval/: __init__.py  lod.py  stratified.py
precise_mrd/models/: base.py  deep_learning.py  machine_learning.py  statistical.py
precise_mrd/sim/: __init__.py  contamination.py
precise_mrd_mini.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reports/: auto_report.html  hash_manifest.txt  metrics.json  power_analysis.json  run_context.json  template.qmd
schemas/: metrics.schema 2.json  run_context.schema 2.json  umi_consensus.yml
serverless/: lambda_function.py  template.yaml
sim/: __init__.py  contamination.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api-reference/: index.html
site/api-reference 2/: index.html
site/contamination/: index.html
site/contamination 2/: index.html
site/evaluation/: index.html
site/evaluation 2/: index.html
site/getting-started/: index.html
site/getting-started 2/: index.html
site/index 2/: index.html
site/reproducibility/: index.html
site/reproducibility 2/: index.html
site/search/: search_index.json
site/statistical-validation/: index.html
site/statistical-validation 2/: index.html
site/tutorials/: formal_detection_limits.ipynb
src/precise_mrd/: __init__ 2.py  __init__.py  advanced_stats.py  call.py  cli.py  collapse.py  config 2.py  config.py  config_validator.py  error_model 2.py  error_model.py  errors.py  exceptions.py  fastq.py  hashing.py  lineage.py  lod.py  logging_config.py  metrics.py  performance.py  reporting 2.py  reporting.py  rng.py  simulate.py  statistical_validation.py  stats.py  umi.py  umi_clustering.py  utils.py  validation.py
src/precise_mrd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
streaming/: kafka_streaming.py
test_results/run/: collapsed_umis.parquet  config.json  error_model.parquet  lineage.json  lod_grid.parquet  metrics.json  mrd_calls.parquet  report.html  report.md  run_context.json  simulated_reads.parquet
tests/: __init__.py  conftest.py  test_artifact_contract 2.py  test_artifact_contract.py  test_config_validator.py  test_determinism.py  test_determinism_hashes.py  test_exceptions.py  test_io_schemas.py  test_lod.py  test_numerical_stability.py  test_rng_api.py  test_smoke_contract.py  test_stats.py  test_umi.py
tests/integration/: run_integration_tests.py  test_config.yaml  test_contamination_scenarios.py  test_deterministic_behavior.py  test_full_pipeline.py  test_stratified_analysis.py
tests/stat_tests/: __init__.py  test_bh_fdr.py  test_lob_lod_bootstrap.py  test_lod_sanity.py  test_stat_properties.py  test_type1_error 2.py  (+1 more)
(+40 files in other folders)
