[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precise-mrd-mini"
version = "0.1.0"
description = "Deterministic ctDNA/UMI MRD pipeline with hardened artifact contracts and CLI tooling"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Precise MRD Team"}
]
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scipy==1.13.1",
    "scikit-learn==1.5.2",
    "pyyaml==6.0.2",
    "click==8.1.7",
    "jsonschema==4.23.0",
    "pandera[io]==0.19.3",
    "dask[dataframe]==2024.8.2",
    "distributed==2024.8.2",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "xgboost==2.1.1",
    "lightgbm==4.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "black==24.8.0",
    "mypy==1.11.2",
    "ruff==0.6.8",
    "hypothesis==6.112.1",
    "types-PyYAML==6.0.12.20240917",
    "twine==5.1.1"
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocstrings[python]>=0.24.0"
]

[project.scripts]
precise-mrd = "precise_mrd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"precise_mrd" = ["assets/configs/*.yaml", "assets/schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not slow'"
markers = ["slow: mark tests that require heavier simulations"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011", "B018"]
