[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precise-mrd-mini"
version = "0.1.0"
description = "Deterministic ctDNA/UMI MRD pipeline with hardened artifact contracts and CLI tooling"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Precise MRD Team"}
]
dependencies = [
    "numpy==1.26.4",
    "pandas>=2.2.2,<3.0",
    "scikit-learn~=1.5.2",
    "pyyaml~=6.0.2",
    "click~=8.1.7",
    "jsonschema~=4.23.0",
    "dask[dataframe]~=2024.8.2",
    "distributed~=2024.8.2",
    "matplotlib~=3.9.2",
    "seaborn~=0.13.2",
    "xgboost~=2.1.1",
    "lightgbm~=4.5.0",
    "torch~=2.4.1",
    "torchvision~=0.19.1",
    "torchaudio~=2.4.1",
    "transformers~=4.44.2",
    "tokenizers~=0.19.1",
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.31.1",
    "pydantic>=2.9.2,<3.0",
    "python-multipart~=0.0.9",
    "aiofiles~=24.1.0",
    "httpx~=0.27.2",
    "streamlit~=1.39.0",
    "plotly~=5.24.1",
    "streamlit-plotly-events~=0.0.6",
    "sqlalchemy>=2.0.44",
    "celery[redis]>=5.6.0rc1",
    "scipy>=1.14.0",
    "pandera>=0.20.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-celery>=0.46b0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "alembic>=1.13.1",
    "mlflow>=2.15.0",
    "structlog>=24.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.3",
    "pytest-cov~=5.0.0",
    "mypy~=1.11.2",
    "ruff~=0.6.8",
    "hypothesis~=6.112.1",
    "types-PyYAML>=6.0.12.20240917",
    "twine~=5.1.1",
    "dvc[s3]~=3.50.0",
    "papermill~=2.5.0",
    "ipykernel~=6.29.5",
    "pre-commit~=3.7.1",
    "snakeviz~=2.2.0",
    "celery>=5.4.0",
    "redis>=5.0.7",
    "requests>=2.32.3",
    "pydantic-settings>=2.4.0",
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocstrings[python]>=0.24.0"
]

[project.scripts]
precise-mrd = "precise_mrd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"precise_mrd" = ["assets/schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not slow' --cov=src/precise_mrd --cov-report=term-missing"
markers = [
    "slow: mark tests that require heavier simulations",
    "integration: mark tests that run the full pipeline end-to-end",
    "contamination: mark tests that focus on contamination analysis",
    "stratified: mark tests that focus on stratified analysis",
    "determinism: mark tests that validate deterministic behavior"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff format
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011", "B018"]

[tool.uv.sources]
precise_mrd = { path = "src/precise_mrd", editable = true }

[tool.coverage.run]
source = ["src/precise_mrd"]
omit = [
    "src/precise_mrd/models/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
