[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "precise-mrd-mini"
version = "0.1.0"
description = "Mini MRD simulation and analysis pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "-ra --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
packages = ["mrd"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
